--- a/package.json
+++ b/package.json
@@ -38,5 +38,11 @@
     "chokidar": "https://registry.npmjs.org/chokidar/-/chokidar-1.0.1.tgz",
     "lodash": "^3.7.0",
     "yargs": "^3.7.2"
+  },
+  "devDependencies": {
+    "mustache": "^2.0.0",
+    "semver": "^4.3.3",
+    "shelljs": "^0.4.0",
+    "string": "^3.1.1"
   }
 }
