--- a/package.json
+++ b/package.json
@@ -41,9 +41,13 @@
   },
   "devDependencies": {
     "commander": "^2.8.0",
+    "mocha": "^2.2.4",
     "mustache": "^2.0.0",
     "semver": "^4.3.3",
     "shelljs": "^0.4.0",
     "string": "^3.1.1"
+  },
+  "scripts": {
+    "test": "mocha"
   }
 }
