--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "chokidar-cli",
     "description": "Ultra-fast cross-platform command line utility to watch file system changes.",
-    "version": "1.0.0-dev",
+    "version": "1.0.1",
     "keywords": [
         "fs",
         "watch",
