Added additional command string replacements

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "bluebird": "^2.9.24",
     "chokidar": "^1.4.3",
     "lodash": "^3.7.0",
+    "path-parse": "^1.0.5",
     "shell-quote": "^1.4.3",
     "yargs": "^3.7.2"
   },
