Switch to semver ranges and update dependencies.

--- a/package.json
+++ b/package.json
@@ -30,13 +30,13 @@
   },
   "license": "MIT",
   "dependencies": {
-    "bluebird": "3.5.5",
-    "chokidar": "3.0.2",
-    "lodash": "4.17.15",
-    "yargs": "13.3.0"
+    "bluebird": "^3.7.1",
+    "chokidar": "^3.2.2",
+    "lodash": "^4.17.15",
+    "yargs": "^13.3.0"
   },
   "devDependencies": {
-    "mocha": "6.2.0"
+    "mocha": "^6.2.1"
   },
   "scripts": {
     "test": "mocha"
