--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
   "license": "MIT",
   "dependencies": {
     "chokidar": "^3.2.2",
-    "lodash": "^4.17.15",
+    "lodash.throttle": "^4.1.1",
+    "lodash.debounce": "^4.0.8",
     "yargs": "^13.3.0"
   },
   "devDependencies": {
