Add ESLint support.

--- a/package.json
+++ b/package.json
@@ -36,15 +36,71 @@
     "yargs": "^13.3.0"
   },
   "devDependencies": {
+    "eslint": "^6.6.0",
     "mocha": "^6.2.2"
   },
   "scripts": {
-    "test": "mocha"
+    "lint": "eslint --report-unused-disable-directives --ignore-path .gitignore .",
+    "mocha": "mocha",
+    "test": "npm run lint && npm run mocha"
   },
   "engines": {
     "node": ">=8.10.0"
   },
   "files": [
     "*.js"
-  ]
+  ],
+  "eslintConfig": {
+    "extends": "eslint:recommended",
+    "parserOptions": {
+      "ecmaVersion": 9,
+      "sourceType": "script"
+    },
+    "env": {
+      "node": true,
+      "es6": true
+    },
+    "rules": {
+      "array-callback-return": "error",
+      "indent": [
+        "error",
+        4
+      ],
+      "no-empty": [
+        "error",
+        {
+          "allowEmptyCatch": true
+        }
+      ],
+      "object-shorthand": "error",
+      "prefer-arrow-callback": [
+        "error",
+        {
+          "allowNamedFunctions": true
+        }
+      ],
+      "prefer-const": [
+        "error",
+        {
+          "ignoreReadBeforeAssign": true
+        }
+      ],
+      "prefer-destructuring": [
+        "error",
+        {
+          "object": true,
+          "array": false
+        }
+      ],
+      "prefer-spread": "error",
+      "prefer-template": "error",
+      "radix": "error",
+      "strict": "error",
+      "quotes": [
+        "error",
+        "single"
+      ],
+      "no-var": "error"
+    }
+  }
 }
