--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   },
   "scripts": {
     "lint": "eslint --report-unused-disable-directives --ignore-path .gitignore .",
-    "mocha": "mocha",
+    "mocha": "mocha --exit --timeout 5000",
     "test": "npm run lint && npm run mocha"
   },
   "engines": {
